--- a/src/Alternate.css
+++ b/src/Alternate.css
@@ -524,7 +524,7 @@ td {
   
 .lead-distribution {
     height: 300px;
-    width: 600px;
+    width: 550px;
     margin-top: 2rem;
 }
 
@@ -624,3 +624,32 @@ td {
         }
     }
 }
+
+
+.loader-div {
+    height: 80vh;
+    display: flex;
+    align-items: center;
+}
+
+/* https://css-loaders.com/bars/ */
+/* HTML: <div class="loader"></div> */
+.loader {
+    width: 2rem;
+    aspect-ratio: 2;
+    --_g: no-repeat radial-gradient(circle closest-side,#000 90%,#0000);
+    background: 
+      var(--_g) 0%   50%,
+      var(--_g) 50%  50%,
+      var(--_g) 100% 50%;
+    background-size: calc(100%/3) 50%;
+    animation: l3 1s infinite linear;
+    margin: auto;
+    
+  }
+  @keyframes l3 {
+      20%{background-position:0%   0%, 50%  50%,100%  50%}
+      40%{background-position:0% 100%, 50%   0%,100%  50%}
+      60%{background-position:0%  50%, 50% 100%,100%   0%}
+      80%{background-position:0%  50%, 50%  50%,100% 100%}
+  }
